--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.0.18",
+        "@hookform/resolvers": "^3.3.1",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-slot": "^1.0.2",
@@ -21,10 +22,10 @@
         "react": "latest",
         "react-dom": "latest",
         "react-hook-form": "^7.46.2",
+        "react-hot-toast": "^2.4.1",
         "tailwind-merge": "^1.14.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.2",
-        "@hookform/resolvers": "^3.3.1",
         "zustand": "^4.4.1"
     },
     "devDependencies": {
