--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-slot": "^1.0.2",
         "@thirdweb-dev/react": "^3.15.0",
+        "@types/uuid": "^9.0.4",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "lucide-react": "^0.279.0",
@@ -25,7 +26,7 @@
         "react-hot-toast": "^2.4.1",
         "tailwind-merge": "^1.14.0",
         "tailwindcss-animate": "^1.0.7",
-        "zod": "^3.22.2",
+        "uuid": "^9.0.1",
         "zustand": "^4.4.1"
     },
     "devDependencies": {
