--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@hookform/resolvers": "^3.3.1",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-slot": "^1.0.2",
         "@thirdweb-dev/react": "^3.15.0",
         "@types/uuid": "^9.0.4",
