feat: police home page

--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
         "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-slot": "^1.0.2",
         "@thirdweb-dev/react": "^3.15.0",
+        "@types/react-chartjs-2": "^2.5.7",
         "@types/uuid": "^9.0.4",
+        "chart.js": "^4.4.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "lucide-react": "^0.279.0",
         "next": "latest",
         "react": "latest",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "latest",
         "react-hook-form": "^7.46.2",
         "react-hot-toast": "^2.4.1",
