feat: mailing for FIR creation

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-slot": "^1.0.2",
         "@thirdweb-dev/react": "^3.15.0",
+        "@types/nodemailer": "^6.4.11",
         "@types/react-chartjs-2": "^2.5.7",
         "@types/uuid": "^9.0.4",
         "chart.js": "^4.4.0",
@@ -23,6 +24,7 @@
         "clsx": "^2.0.0",
         "lucide-react": "^0.279.0",
         "next": "latest",
+        "nodemailer": "^6.9.6",
         "react": "latest",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "latest",
